traffic-policy/sidecar/app.yaml
##################################################################################################
# httpbin service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
spec:
  ports:
  - name: http
    port: 5678
  selector:
    app: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
      version: v1
  template:
    metadata:
      labels:
        app: httpbin
        version: v1
    spec:
      containers:
      - image: registry.cn-beijing.aliyuncs.com/wangxining/mirrorservice:lb
        imagePullPolicy: IfNotPresent
        name: httpbin
        ports:
        - containerPort: 5678
